# maivn-anvil-connector

./: .gitignore  CHANGELOG.md  NOTICE  README.md  __init__.py  anvil.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
client_code/: events.py  interrupt_controls.py  markdown.py  poller.py  session.py  shell.py  showcase.py  ui.py
client_code/Docs/: __init__.py  _anvil_designer.pyi
client_code/Example_BasicChat/: __init__.py  _anvil_designer.pyi
client_code/Example_InterruptApproval/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/Example_SwarmResearch/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/Home/: __init__.py  _anvil_designer.pyi
client_code/Startup/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/components/: __init__.py
client_code/components/ActivityFeed/: __init__.py  _anvil_designer.pyi
client_code/components/Composer/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/components/ExampleCards/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/components/InterruptPrompt/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/components/MaivnChatPanel/: __init__.py  _anvil_designer.pyi  form_template.yaml
client_code/components/MessageList/: __init__.py  _anvil_designer.pyi
client_code/components/PoweredByBadge/: __init__.py  _anvil_designer.pyi
local/: anvil-server.config.yaml.example
server_code/: __init__.py  _py310_compat.py  attachments.py  config.py  demo_agents.py  drain.py  events_writer.py  interrupts.py  limits.py  messages.py  pump.py  registry.py  runner.py  sessions.py  tables.py  version.py
stubs/maivn_anvil_connector/: __init__.py  __init__.pyi  attachments.py  attachments.pyi  config.py  config.pyi  demo_agents.py  demo_agents.pyi  drain.py  drain.pyi  events.py  events.pyi  events_writer.py  events_writer.pyi  interrupt_controls.py  interrupt_controls.pyi  interrupts.py  interrupts.pyi  limits.py  limits.pyi  markdown.py  markdown.pyi  messages.py  messages.pyi  poller.py  poller.pyi  pump.py  pump.pyi  registry.py  registry.pyi  runner.py  runner.pyi  session.py  session.pyi  sessions.py  sessions.pyi  showcase.py  showcase.pyi  tables.py  tables.pyi  (+2 more)
stubs/maivn_anvil_connector/components/: MessageList.py
tests/: conftest.py  test_fakes.py  test_import.py  test_schema.py  test_theme_tokens.py
tests/_fakes/: anvil_designer.py
tests/_fakes/anvil/: __init__.py  media.py  secrets.py  server.py  tables.py
tests/_fakes/anvil/js/: __init__.py  window.py
tests/client_code/: test_events.py  test_forms.py  test_interrupt_controls.py  test_markdown.py  test_message_list.py  test_poller.py  test_session.py
tests/server_code/: test_anvil_runtime_imports.py  test_attachments.py  test_config.py  test_current_owner.py  test_demo_agents.py  test_events_writer.py  test_exports.py  test_interrupt_session_binding.py  test_interrupts.py  test_limits.py  test_maivn_import_after_compat.py  test_messages.py  test_pump.py  test_py310_compat.py  test_registry.py  test_runner.py  test_sessions.py  test_tables.py
theme/: parameters.yaml
theme/assets/: standard-page.html  theme.css
