[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "maivn-anvil-connector"
dynamic = ["version"]
description = "Anvil dependency app for connecting Anvil backends to mAIvn services"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Chad Heathcote", email = "developer@maivn.io" }]
keywords = ["maivn", "anvil", "connector", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://maivn.io"
Repository = "https://github.com/mAIvn-developer/maivn-anvil-connector"
Issues = "https://github.com/mAIvn-developer/maivn-anvil-connector/issues"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12,<1",
]

[tool.hatch.version]
path = "server_code/version.py"

[tool.hatch.build.targets.wheel]
# Anvil loads this repo root as maivn_anvil_connector; the wheel ships metadata only.
bypass-selection = true
only-include = ["README.md", "LICENSE"]

[tool.ruff]
target-version = "py310"
line-length = 100
# Type-checker stub files (.pyi) are re-export shims for the Anvil path-merge
# layout; they intentionally use star re-exports and are not runtime code.
extend-exclude = ["stubs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# client_code runs in the Anvil client (Skulpt), which evaluates annotations at
# runtime and ships no `typing`/`dataclasses`/`__future__.annotations`. Client
# modules are therefore written annotation-free, so the required-future-import
# (I002) and pyupgrade-annotation (UP) rules must not apply there.
"client_code/**" = ["I002", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
stubPath = "stubs"
include = ["server_code", "client_code", "tests"]
exclude = [".venv"]
